[tool.poetry]
name = "sip"
version = "0.1.0"
description = ""
authors = ["lalit5542 <lalit5542@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nsepy = "^0.8"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
